Make site responsive

--- a/phoxul_website/index.html
+++ b/phoxul_website/index.html
@@ -21,7 +21,7 @@
     <header class="header overall-layout">
       <a class="header__logo" href="#">Phoxul</a>
 
-      <ul class="header__nav">
+      <nav class="header__nav">
         <a class="header__nav--link" href="#">Home</a>
         <a class="header__nav--link" href="#">About</a>
         <a class="header__nav--link" href="#">Services</a>
@@ -29,7 +29,13 @@
         <a class="header__nav--link" href="#">Gallery</a>
         <a class="header__nav--link" href="#">Blog</a>
         <a class="header__nav--link" href="#">Contact</a>
-      </ul>
+      </nav>
+
+      <div class="hamburger">
+        <div class="hamburger__line"></div>
+        <div class="hamburger__line"></div>
+        <div class="hamburger__line"></div>
+      </div>
     </header>
 
     <!-- ------------------------------------------------------ Hero -->
@@ -412,5 +418,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- ------------------------------------------------------ JS -->
+    <script src="app.js"></script>
   </body>
 </html>
