--- a/exercies-flexbox/css-flexbox-exercises-common-layouts-components/01-checkout/01-practice/checkout.html
+++ b/exercies-flexbox/css-flexbox-exercises-common-layouts-components/01-checkout/01-practice/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout Exercise</title>
-    <link rel="stylesheet" href="../general-styles.css" />
+    <link rel="stylesheet" href="../../general-styles.css" />
     <link rel="stylesheet" href="checkout.css" />
   </head>
   <body>
@@ -72,20 +72,20 @@
           class="checkout__billing-textarea"
           placeholder="Additional Information"
         ></textarea>
-        <div class="checkout__billing-container">
+        <div class="checkout__billing-checkbox-container">
           <input
             type="checkbox"
-            class="checkout__billing-input__checkbox"
+            class="checkout__billing-input--checkbox"
           /><label for="">Create Account</label>
         </div>
-        <div class="checkout__billing-container">
+        <div class="checkout__billing-checkbox-container">
           <input
             type="checkbox"
-            class="checkout__billing-input__checkbox"
+            class="checkout__billing-input--checkbox"
           /><label for="">Ship to a different address</label>
         </div>
         <p class="checkout__para">Apply coupon to get discount</p>
-        <div class="checkout__billing-container">
+        <div class="checkout__billing-checkbox-container">
           <input
             type="text"
             class="checkout__billing-input--coupon"
@@ -107,35 +107,38 @@
         <div class="order__product">
           <img class="order__product-img" src="../images/1.1.jpg" alt="" />
           <div class="order__product-info">
-            <h4 class="order__product-name">title</h4>
+            <h4 class="order__product-name">Men's T-shirt</h4>
             <div class="order__product-details">
-              <p class="order__product-color">Red</p>
+              <p class="order__product-color">White</p>
               <p class="order__product-size">XL</p>
+              <p class="order__product-quantity">1x36.00</p>
             </div>
           </div>
-          <h4 class="order__product-price">$9.99</h4>
+          <h4 class="order__product-price">$36.00</h4>
         </div>
         <div class="order__product">
           <img class="order__product-img" src="../images/1.2.jpg" alt="" />
           <div class="order__product-info">
-            <h4 class="order__product-name">title</h4>
+            <h4 class="order__product-name">Men's T-shirt</h4>
             <div class="order__product-details">
-              <p class="order__product-color">Red</p>
+              <p class="order__product-color">Blue</p>
               <p class="order__product-size">XL</p>
+              <p class="order__product-quantity">1x36.00</p>
             </div>
           </div>
-          <h4 class="order__product-price">$9.99</h4>
+          <h4 class="order__product-price">$36.00</h4>
         </div>
         <div class="order__product">
           <img class="order__product-img" src="../images/1.3.jpg" alt="" />
           <div class="order__product-info">
-            <h4 class="order__product-name">title</h4>
+            <h4 class="order__product-name">Women's T-shirt</h4>
             <div class="order__product-details">
-              <p class="order__product-color">Red</p>
-              <p class="order__product-size">XL</p>
+              <p class="order__product-color">Black</p>
+              <p class="order__product-size">L</p>
+              <p class="order__product-quantity">1x36.00</p>
             </div>
           </div>
-          <h4 class="order__product-price">$9.99</h4>
+          <h4 class="order__product-price">$36.00</h4>
         </div>
 
         <div class="order__subtotal-container">
@@ -160,17 +163,20 @@
       </div>
 
       <div class="order__payment-container">
-        <div class="radio-container">
+        <div class="order__payment-container-header">
+          <h4>Product</h4>
+        </div>
+        <div class="order__radio-container">
           <input type="radio" /><label for="payment-option"
             >Direct bank transfer</label
           >
         </div>
-        <div class="radio-container">
+        <div class="order__radio-container">
           <input type="radio" /><label for="payment-option"
             >Cash on delivery</label
           >
         </div>
-        <div class="radio-container">
+        <div class="order__radio-container">
           <input type="radio" /><label for="payment-option"
             >Online Gateway</label
           >
