--- a/exercises-grid/06-product-carousel/01-practice/product-carousel.html
+++ b/exercises-grid/06-product-carousel/01-practice/product-carousel.html
@@ -3,7 +3,136 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../../general-styles.css" />
+    <link rel="stylesheet" href="product-carousel.css" />
+    <title>Product Carousel</title>
   </head>
-  <body></body>
+  <body>
+    <div class="carousel">
+      <div class="carousel__content">
+        <h6 class="carousel__mini-title">Most Popular Products</h6>
+        <h2 class="carousel__title">Best Selling Items</h2>
+        <p class="carousel__desc">
+          Lorem ipsum dolor sit amet consectetur.
+          <span>Lorem ipsum dolor sit amet.</span>
+        </p>
+      </div>
+
+      <div class="carousel__products">
+        <div class="carousel__product">
+          <figure class="product__image-container">
+            <img
+              src="../../images/6.1.jpg"
+              alt="Product"
+              class="product__image"
+            />
+
+            <figcaption class="product__tag product__tag--discount">
+              -50%
+            </figcaption>
+          </figure>
+
+          <h4 class="product__title">Smart Watch</h4>
+          <p class="product__price">
+            $75.00 <span class="product__price--discount">$150</span>
+          </p>
+
+          <div class="product__rating-container">
+            <div class="product__stars">
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i>
+            </div>
+
+            <p class="product__rating">5.00 Rating</p>
+          </div>
+        </div>
+
+        <div class="carousel__product">
+          <figure class="product__image-container">
+            <img
+              src="../../images/6.2.jpg"
+              alt="Product"
+              class="product__image"
+            />
+
+            <figcaption class="product__tag product__tag--hot">Hot</figcaption>
+          </figure>
+          <h4 class="product__title">Stylish Backpack</h4>
+          <p class="product__price">$189.00</p>
+          <div class="product__rating-container">
+            <div class="product__stars">
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-regular fa-star"></i>
+            </div>
+
+            <p class="product__rating">4.00 Rating</p>
+          </div>
+        </div>
+
+        <div class="carousel__product">
+          <figure class="product__image-container">
+            <img
+              src="../../images/6.3.jpg"
+              alt="Product"
+              class="product__image"
+            />
+
+            <figcaption class="product__tag product__tag--new">New</figcaption>
+          </figure>
+          <h4 class="product__title">Luxury Wallet</h4>
+          <p class="product__price">$95.00</p>
+          <div class="product__rating-container">
+            <div class="product__stars">
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i>
+            </div>
+
+            <p class="product__rating">5.00 Rating</p>
+          </div>
+        </div>
+
+        <div class="carousel__product">
+          <figure class="product__image-container">
+            <img
+              src="../../images/6.4.jpg"
+              alt="Product"
+              class="product__image"
+            />
+
+            <figcaption></figcaption>
+          </figure>
+          <h4 class="product__title">Polo Shirt</h4>
+          <p class="product__price">$65.00</p>
+          <div class="product__rating-container">
+            <div class="product__stars">
+              <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+              ><i class="fa-solid fa-star"></i>
+            </div>
+
+            <p class="product__rating">5.00 Rating</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="carousel__controller">
+        <div class="controller__option controller__option--prev">
+          <i class="fa-solid fa-angle-left"></i>
+        </div>
+        <div class="controller__option controller__option--next">
+          <i class="fa-solid fa-angle-right"></i>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
