Create shopping cart UI using grid

--- a/exercises-grid/07-shopping-cart/01-practice/shopping-cart.html
+++ b/exercises-grid/07-shopping-cart/01-practice/shopping-cart.html
@@ -4,6 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping Cart</title>
+    <link rel="stylesheet" href="../../general-styles.css" />
+    <link rel="stylesheet" href="shopping-cart.css" />
   </head>
-  <body></body>
+  <body>
+    <main class="cart">
+      <h2 class="cart__title">Shopping Cart</h2>
+
+      <section class="cart__products">
+        <div class="products__product">
+          <figure class="product__img">
+            <img src="../../images/7.1.jpg" alt="Skirt" />
+          </figure>
+
+          <div class="product__details">
+            <h3 class="product__name">Exquisite Skirt</h3>
+            <h6 class="product__color">Brown</h6>
+            <h6 class="product__size">Size: S</h6>
+            <h6 class="product__availability">In Stock</h6>
+            <a href="#" class="product__editing">Edit</a>
+            <a href="#" class="product__remove">Remove</a>
+          </div>
+
+          <p class="product__price">Each <span>$39.00</span></p>
+          <div class="product__quantity">
+            <p>Quantity</p>
+            <input type="number" placeholder="1" />
+          </div>
+        </div>
+
+        <div class="products__product">
+          <figure class="product__img">
+            <img src="../../images/7.2.jpg" alt="Sneakers" />
+          </figure>
+
+          <div class="product__details">
+            <h3 class="product__name">Exquisite Skirt</h3>
+            <h6 class="product__color">Purple</h6>
+            <h6 class="product__size">Size: M</h6>
+            <h6 class="product__availability">In Stock</h6>
+            <a href="#" class="product__editing">Edit</a>
+            <a href="#" class="product__remove">Remove</a>
+          </div>
+
+          <p class="product__price">Each <span>$39.00</span></p>
+          <div class="product__quantity">
+            <p>Quantity</p>
+            <input type="number" placeholder="1" />
+          </div>
+        </div>
+      </section>
+
+      <aside class="cart__checkout">
+        <div>
+          <h3 class="checkout__title">Apply coupon to get discount</h3>
+
+          <fieldset class="checkout__coupon">
+            <input type="text" placeholder="Coupon Code" />
+            <input type="submit" value="Submit" />
+          </fieldset>
+        </div>
+
+        <div>
+          <p class="checkout__subtotal">Subtotal <span>$138.00</span></p>
+          <p class="checkout__shipping-cost">
+            Shipping Cost <span>$13.50</span>
+          </p>
+          <p class="checkout__discount">Discount <span>$0.00</span></p>
+        </div>
+
+        <div>
+          <p class="checkout__total">Total <span>$151.50</span></p>
+          <input type="submit" value="Checkout" />
+          <p class="checkout__bonus">
+            You're <span>$10.50</span> away from free shipping
+          </p>
+        </div>
+      </aside>
+    </main>
+  </body>
 </html>
